--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,7 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: Go
+name: 编译发布
 
 on:
     workflow_dispatch:
@@ -38,7 +38,18 @@ jobs:
                     GOOS: ${{ matrix.goos }}
                     GOARCH: ${{ matrix.goarch }}
                     CGO_ENABLED: 0
-
+#            -   name: Package
+#                run: |
+#                    if [[ ${{ matrix.goos }} == "windows" ]]; then
+#                        zip -r dist/natter_${{ matrix.goos }}_${{ matrix.goarch }}.zip dist/natter_${{ matrix.goos }}_${{ matrix.goarch }}.exe
+#                    else
+#                        tar -czvf dist/natter_${{ matrix.goos }}_${{ matrix.goarch }}.tar.gz dist/natter_${{ matrix.goos }}_${{ matrix.goarch }}
+#                    fi
+#                # 移除编译文件
+#            -   name: Remove
+#                run: |
+#                    rm -rf dist/natter_${{ matrix.goos }}_${{ matrix.goarch }}
+#                    rm -rf dist/natter_${{ matrix.goos }}_${{ matrix.goarch }}.exe
             -   name: Release
                 uses: softprops/action-gh-release@v2
                 with:
